solved the issue of not showing the result

--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,8 @@
 html, body {
     margin: 0;
     padding: 0;
-    overflow-x: hidden; /* Prevent horizontal overflow */
+    min-width: 55rem;
+    overflow-x: auto; /* Prevent horizontal overflow */
 }
 
 body {
@@ -68,7 +69,6 @@ body {
     justify-content: center;
     justify-content: center;
     gap: 2rem;
-
 }
 .button{
     height: 3rem;
@@ -113,11 +113,25 @@ body {
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
     box-sizing: border-box; /* Include padding and border in the width */
     padding: 3rem;
-    overflow: hidden;      /* Prevent overflow */
+    overflow: hidden;      /*Prevent overflow*/
     position: relative;
 }
 
-.result {
+
+.result-to-show{
+    width: 100%;  
+    border: none;
+    background-color: white;
+    border-radius: 1rem;
+    border: 1px solid black;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+    box-sizing: border-box; /* Include padding and border in the width */
+    padding: 3rem;
+    overflow: hidden;     /* Prevent overflow */
+    position: relative;
+}
+
+/* .result {
     display: none;
     width: 100%;  
     height: 40rem;
@@ -126,8 +140,8 @@ body {
     border-radius: 1rem;
     border: 1px solid black;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
-    box-sizing: border-box; /* Include padding and border in the width */
-}
+    box-sizing: border-box; 
+} */
 
 .foo{
     display: felx;
@@ -161,6 +175,10 @@ th{
 th{
     background: #3e4c59;
 }
+tr{
+    text-align: center;
+
+}
 tr:nth-of-type(2n){
     background: #fcfcfc;
 }
@@ -169,6 +187,7 @@ tr:nth-of-type(2n){
 /* implement the blur effct */
 .table-container{
     filter: blur(3px);
+    
 }
 
 .result-message {
